# AstroPhoto-Plus-Desktop

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  __removeme_travis_find_latest_github_pr.py
cmake/: SetProjectVersion.cmake
scripts/: travis_deploy
src/: CMakeLists.txt  astrophotopluswidget.cpp  notification.ui  notifications.cpp  notifications.h
src/resources/: CMakeLists.txt  icon.rc  installer.nsis  launcher.desktop  launcher.desktop.in  version.env.in
support/: compile-qt  qt-installer-linux.qs  qt-installer-windows.qs  qt-installer.py  qt-installer.qs  travis-install-qt-for-windows  travis-qt-installer  travis_deploy
vagrant/bionic-test/: Vagrantfile
vagrant/osx/: README.md
vagrant/osx/compile/: Vagrantfile
vagrant/osx/test/: Vagrantfile
vagrant/xenial/: Vagrantfile
